[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/player_bullet.gd" type="Script" id=1]
[ext_resource path="res://art/bullets/maratha_bullet/coll_6.png" type="Texture" id=2]
[ext_resource path="res://art/bullets/maratha_bullet/coll_8.png" type="Texture" id=3]
[ext_resource path="res://art/bullets/maratha_bullet/coll_7.png" type="Texture" id=4]
[ext_resource path="res://art/bullets/maratha_bullet/coll_3.png" type="Texture" id=5]
[ext_resource path="res://art/bullets/maratha_bullet/coll_1.png" type="Texture" id=6]
[ext_resource path="res://art/bullets/maratha_bullet/coll_2.png" type="Texture" id=7]
[ext_resource path="res://art/bullets/maratha_bullet/coll_4.png" type="Texture" id=8]
[ext_resource path="res://art/bullets/maratha_bullet/pistol_bullet.png" type="Texture" id=9]
[ext_resource path="res://art/bullets/maratha_bullet/coll_5.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": false,
"name": "collide",
"speed": 40.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.45984
height = 8.78011

[node name="player_bullet" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 208
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.357231, -1.01215 )
frames = SubResource( 1 )
animation = "collide"
flip_h = true

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.168864, -0.868979 )
rotation = 1.56775
scale = Vector2( 2.09835, 2.06877 )
shape = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_player_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_player_bullet_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
